--- a/index.html
+++ b/index.html
@@ -9,5 +9,19 @@
 </head>
 <body>
     <h1 class="text-center color-maroon">No-instructor Ideas</h1>
+    <!-- begin nn -->
+    <h2 class="color-navyblue">Net Neutrality</h2>
+    <p>The FCC is about to vote on rolling back the previously established rules for net neutrality. With the internet being such an important part of our everyday lives, this will have a huge effect on how we pay for and use the internet. A large portion of the general public, however, has no idea what these laws are and how this can effect them. The goal of this app would be to educate people on exactly what net neutrality is. </p>
+    <h4 class="color-navyblue">App would include</h4>
+    <ul>
+        <li>A layout of what the rules are as of the 2015 ruling</li>
+        <li>A display of what the rules could be</li>
+        <li>How this would effect our every day lives by giving examples of countries that don't stick to net neutrality (i.e. Spain, Portugal)</li>
+        <li>The argument against NN presented in an objective fashion</li>
+        <li>How a reader can effect change (i.e. contacting representatives)</li>
+    </ul>
+    <!-- end nn -->
+    
+
 </body>
 </html>
