--- a/index.html
+++ b/index.html
@@ -20,8 +20,16 @@
         <li>The argument against NN presented in an objective fashion</li>
         <li>How a reader can effect change (i.e. contacting representatives)</li>
     </ul>
+    <hr>
     <!-- end nn -->
-    
-
+    <!-- begin education -->
+    <h2 class="color-navyblue">Tech education</h2>
+    <p>With technology becoming increasingly ubiquitous every year, current education should reflect that by educating children on safe practices with todays technologies, and things that kids need to look out for. Nowadays, the internet is the first place a child is left unsupervised, yet there is no preparation whatsoever for what a child experiences. This needs to change. We came up with two ideas targeted at middle school education.</p>
+    <h3 class="color-navyblue">Educating middle schoolers through the app</h3>
+    <p>This idea, admittedly the one as a group we seemed to prefer, would make the app an educational tool for children at the middle school level. The plan would be to create several games that simulate challenges that someone new to the internet would encounter that could cause harm unbeknownst to them. Examples would be picking out safe or unsafe simulated e-mails to recognize phishing scams, demonstrating dangerous ads that could lead to adware, and etiquette practice with people online.</p>
+    <h3 class="color-navyblue">Targeting educators of middle school students</h3>
+    <p>This approach is made for teachers and would detail a cirriculum that can be used in a middle school course. We believe that a tech class should be taught at the very latest at a middle school level, and we can outline important areas that should be covered, as well as giving a presentation on the more important subjects. The subjects would be similar to the ones mentioned above, but we would include more content as we would be outlining an entire cirriculum.</p>
+    <hr>
+    <!-- end eductation -->
 </body>
 </html>
