--- a/index.html
+++ b/index.html
@@ -31,5 +31,17 @@
     <p>This approach is made for teachers and would detail a cirriculum that can be used in a middle school course. We believe that a tech class should be taught at the very latest at a middle school level, and we can outline important areas that should be covered, as well as giving a presentation on the more important subjects. The subjects would be similar to the ones mentioned above, but we would include more content as we would be outlining an entire cirriculum.</p>
     <hr>
     <!-- end eductation -->
+    <!-- begin driving ed -->
+    <h2 class="color-navyblue">Practical driving education</h2>
+    <p>This idea stems from the notion that the current system of educating people is far too impractical for anyone that will actually be driving on a regular basis... which is just about everybody. The goal here is to educate people with driving tips that aren't taught in the normal driving education cirriculum, and emphasize things that are, but may not have been retained very well.</p>
+    <h4 class="color-navyblue">App features</h4>
+    <ul>
+        <li>An interactive animated demonstration of real-world scenarios that people will encounter, and how to approach them.</li>
+        <li>A quiz that the user can take and afterwards be informed of answers they may not have been aware of. The goal isn't to get the highest score possible; it's to understand etiquette that they may not be aware of, such as slower traffic staying out of the left lanes.</li>
+        <li>Explanations of common yet fairly dangerous situations that could lead to an accident</li>
+        <li>A standard procedure for what happens when something goes wrong with your vehicle and you don't know what to do.</li>
+    </ul>
+    <hr>
+    <!-- end driving ed -->
 </body>
 </html>
