--- a/index.html
+++ b/index.html
@@ -43,5 +43,17 @@
     </ul>
     <hr>
     <!-- end driving ed -->
+    <!-- begin budgeting -->
+    <h2 class="color-navyblue">Personal budgeting application</h2>
+    Maintaining a proper budget is becoming increasingly difficult due to the lard amount of subscription costs that are popping up everywhere are companies attempt to further monetize content. While there are plenty of heavy-duty financial programs to compile a complex analysis of a personals budget such as Quicken, our goal would be to complete a free, lightweight application in which people can input their income, list any and all recurring expenses, and have a visual presentation of how much disposable income they have, and how cutting certain subscriptions would affect their budget.
+    <h4 class="color-navyblue">App features</h4>
+    <ul>
+        <li>Continuous input of income which would store amounts on a back end and give a projected average</li>
+        <li>Prompt user for common recurring costs so they dont forget (i.e. health insurance, phone bill)</li>
+        <li>Also prompt the user for less common subscriptions that are growing in number (i.e. game subscriptions, media contents subs, etc)</li>
+        <li>Display not only what a personal budget looks like currently, but also project how it would look if there was a change of income, such as a raise, or if they added/removed subscriptions.</li>
+    </ul>
+    <hr>
+    <!-- end budgeting -->
 </body>
 </html>
