--- a/index.html
+++ b/index.html
@@ -55,5 +55,17 @@
     </ul>
     <hr>
     <!-- end budgeting -->
+    <!-- begin other -->
+    <h2 class="color-navyblue">Other ideas</h2>
+    <p>These were some ideas that we came up with and discusses, but decided to cut either due to scope, not being considered socially impactful, or just decided to throw out there as a fun idea.</p>
+    <h4 class="color-navyblue">Geocaching</h4>
+    <p>An app designed to assist with the discovery and keep track of geocaches in the Fresno area.</p>
+    <h4 class="color-navyblue">Location History</h4>
+    <p>An app that would keep track of your location history over a set amount of time and present that data in an interesting way.</p>
+    <h4 class="color-navyblue">Shopping app</h4>
+    <p>Create an interactive shopping list app that would save items for use in later lists</p>
+    <h4 class="color-navyblue">Ingredients tracker</h4>
+    <p>Possibly in conjuction with the shopping app, have a list of recipes that when added to the shopping app would display a list of ingredients necessary to make said dish, along with cooking instructions.</p>
+    <!-- end other -->
 </body>
 </html>
